--- a/index.html
+++ b/index.html
@@ -21,6 +21,24 @@
   <h2>4. 약관 변경</h2>
   <p>운영자는 사전 통보 없이 약관을 변경할 수 있으며, 변경된 약관은 즉시 효력을 가집니다.</p>
 
+  <h1>개인정보 처리방침 (Privacy Policy)</h1>
+  <p>본 Discord 봇(이하 "서비스")은 사용자의 개인정보를 최소한으로 수집하며, 수집한 정보는 외부에 공유되지 않습니다.</p>
+
+  <h2>1. 수집하는 정보</h2>
+  <ul>
+    <li>Discord 사용자 ID</li>
+    <li>Roblox 계정 정보 (연동된 경우)</li>
+  </ul>
+
+  <h2>2. 수집 목적</h2>
+  <p>사용자 식별 및 봇의 기능 제공(명령어 응답, 역할 부여 등)을 위해 수집됩니다.</p>
+
+  <h2>3. 정보 보관 기간</h2>
+  <p>정보는 사용자가 연동을 취소하거나 봇에서 탈퇴할 때까지 보관됩니다.</p>
+
+  <h2>4. 정보 공유</h2>
+  <p>서비스는 수집된 정보를 제3자에게 제공하지 않으며, 마케팅 목적으로 사용하지 않습니다.</p>
+
   <p>최종 업데이트: 2025년 4월</p>
 </body>
 </html>
